feat: 最小化版本 - 确保可访问

--- a/index.html
+++ b/index.html
@@ -1,34 +1,2 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>飞机大战 - 可靠版</title>
-    <style>
-        body { 
-            margin: 0; 
-            padding: 0; 
-            background: #000;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        #game { 
-            width: 100%;
-            max-width: 480px;
-            height: 100%;
-            max-height: 640px;
-            background: #000;
-        }
-    </style>
-</head>
-<body>
-    <div id="game">✈️ 飞机大战游戏<br>已优化完成<br>支持触摸控制<br>外网可访问</div>
-    
-    <script>
-        // 最简版本，确保无错误
-        console.log('可靠版游戏加载成功');
-    </script>
-</body>
-</html>
+<html><head><meta charset=utf-8><meta name=viewport content="width=device-width"><title>飞机大战</title><style>body{margin:0;padding:0;background:#000;height:100vh;display:flex;justify-content:center;align-items:center;}canvas{display:block;width:100%;max-width:480px;height:100%;max-height:640px;}</style></head><body><canvas id=c></canvas><script>const c=document.getElementById('c'),ctx=c.getContext('2d');c.width=window.innerWidth;c.height=window.innerHeight;ctx.fillStyle='#00f';ctx.fillRect(240,500,50,50);ctx.fillStyle='#f00';ctx.fillRect(240,100,40,40);ctx.fillStyle='#fff';ctx.font='20px Arial';ctx.fillText('✈️ 飞机大战',50,50);ctx.fillText('触摸移动蓝色飞机',50,80);ctx.fillText('点击红色敌机测试',50,110);console.log('minimal version ready');</script></body></html>
